<resources>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Don\'t have an account? Sign up!</string>
    <string name="first_name"> First Name </string>
    <string name="last_name"> Last Name </string>
    <string name="enter"> Enter </string>
    <string name="email">Email</string>
    <string name="app_name">InstagramApplication</string>
</resources>
